Alteirei o index, criei a pasta img, criei 3 arq

--- a/Meu-Primeiro-Site/index.html
+++ b/Meu-Primeiro-Site/index.html
@@ -3,25 +3,46 @@
 	<meta charset = 'utf-8' />
 	<title>Meu Site</title>
 </head>
-	
+
 <body>
-		<center><h1> Meu Site </h1></center>
+
+	<center>
+      <h1> Meu Site </h1>
+      <h2> Navegação </h2>
+  </center>
+
+<ul>
+    <li>
+        Home
+    </li>
+    <li>
+        Fotos
+    </li>
+    <li>
+        Tabela
+    </li>
+    <li>
+        Formulário
+    </li>
+</ul>
+
+
 
 <ol>
 	<li>
-	<img src="macbook.webp"   title= "Mac Book Air 13'" />
-	</li>	
-		
-	<li>
-	<img src="iphone.webp"   title = "Iphone" />
-	</li>
-		
-	<li>
-	<img src="ssd.webp"   title = "SSD" />
+	<img src="/imgs/macbook.webp"   title= "Mac Book Air 13'" />
 	</li>
 
 	<li>
-	<img src="teclado.webp"   title = "Teclado" />
+	<img src="/imgs/iphone.webp"   title = "Iphone" />
+	</li>
+
+	<li>
+	<img src="/imgs/ssd.webp"   title = "SSD" />
+	</li>
+
+	<li>
+	<img src="/imgs/teclado.webp"   title = "Teclado" />
 	</li>
 </ol>
 
