--- a/tabela.html
+++ b/tabela.html
@@ -16,5 +16,80 @@
 </head>
 <body>
   <h3 class="titulo-01">Bem vindo a página da tabela</h3>
+
+  <table border="1">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Nome</th>
+        <th>Altura</th>
+        <th>Ações</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>01</td>
+        <td>Pedro Lacerda</td>
+        <td> 1,69</td>
+        <td>
+          <button>Editar Admin</button>
+        </td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>Alex</td>
+        <td>1,60</td>
+        <td>
+          <button>Excluir Cadastro</button>
+        </td>
+        
+      </tr>
+      <tr>
+        <td colspan="4">
+          Está mesclada
+        </td>
+      </tr>
+      <tr>
+        <td rowspan="4">3,6,5</td>
+      </tr>
+      <tr>
+        <td>Marcos</td>
+        <td>1,90</td>
+        <td>
+          <button>
+            Excluir Cadastro
+          </button>
+        </td>
+      </tr>
+      <tr>
+        <td>Antonio</td>
+        <td>2,00</td>
+        <td>
+          <button>
+            Excluir Cadastro
+          </button>
+        </td>
+      </tr>
+      <tr>
+        <td>Ana Lucia</td>
+        <td>1,50</td>
+        <td>
+          <button>
+            Excluir Cadastro
+          </button>
+        </td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>Yasmin</td>
+        <td>1,60</td>
+        <td>
+          <a href="https://facebook.com">
+            Rede social
+          </a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 </html>
