--- a/formulario.html
+++ b/formulario.html
@@ -16,5 +16,137 @@
 </head>
 <body>
   <h3 class="titulo-01">Bem vindo a página do Formulário</h3>
+
+  <h2>Navegação</h2>
+  <ul>
+
+  </ul>
+  <label>Input Button</label>
+  <input type="button">
+  <br /><br />
+
+  <label>Caixa de opções</label>
+  <input type="checkbox">
+  <br /><br />
+
+  <label>Abre uma caixa de cor</label>
+  <input type="color">
+  <br /><br />
+
+  <label>Caixa de datas</label>
+  <input type="date">
+  <br /> <br />
+
+  <label>Caixa de texto UTC</label>
+  <input type="datetime-local">
+  <br /><br />
+
+  <label>valida e-mail válido</label>
+  <input type="email">
+  <br /><br />
+
+  <label>Caixa para escolher arquivo</label>
+  <input type="file">
+  <br /><br />
+
+  <label>Input invisível</label>
+  <input type="hidden">
+  <br /><br />
+
+  <label>Coloca imagem</label>
+  <input type="image">
+  <br><br>
+
+  <label>Caixa de meses</label>
+  <input type="month">
+  <br><br>
+
+  <label>Caixa de números</label>
+  <input type="number">
+  <br><br>
+
+  <label>Caixa de texto (Deixa protejida)</label>
+  <input type="password">
+  <br><br>
+
+  <label>opções únicas</label>
+  <input type="radio">
+  <br><br>
+
+  <label>Espaço entre algo</label>
+  <input type="range">
+  <br><br>
+
+  <label>Reseta a tabela</label>
+  <input type="reset">
+  <br><br>
+
+  <label>Pesquisa</label>
+  <input type="search">
+  <br><br>
+
+  <label>Botão</label>
+  <input type="submit">
+  <br><br>
+
+  <label>Coloca telefones válidos</label>
+  <input type="tel">
+  <br><br>
+
+  <label>Coloca texto</label>
+  <input type="text">
+  <br><br>
+
+  <label>Selecionar tempo de algo</label>
+  <input type="time">
+  <br><br>
+
+  <label>Colocar URL's válidas</label>
+  <input type="url">
+  <br><br>
+
+  <label>Colocar semanas</label>
+  <input type="week">
+
+  <!-- Formulário -->
+
+  <form action="" method="" style="margin-top: 10%;">
+
+    <label> Nome Completo:  </label> <br />
+    <input type="text" />
+    <br />
+
+    <label>Data Nascimento: </label> <br />
+    <input type="date" />
+    <br />
+
+    <label>CPF: </label>
+    <input type="text" /> <br />
+
+    <label>RG: </label>
+    <input type="text" /> <br />
+
+    <label>Foto do cartão de crédito (frente)</label> <br />
+    <input type="file" /> <br />
+
+    <label>Foto do cartão de crédito (verso)</label> <br />
+    <input type="file" /> <br />
+
+    <label>Pets favoritos: </label> <br />
+    <input type="checkbox"> Cachiorro <br />
+    <input type="checkbox"> Miau <br />
+    <input type="checkbox"> Calopsita <br />
+    <input type="checkbox"> Cueio <br />
+    <br>
+
+    <label>Sexo: </label>
+    <input type="radio" name="sexo" />Masculino
+    <input type="radio" name="sexo" />Feminino <br /> <br />
+
+    <button type="submit">Salvar</button>
+    <button type="reset">Limpar</button>
+
+  </form>
+
 </body>
 </html>
