--- a/ETEC/index.html
+++ b/ETEC/index.html
@@ -13,15 +13,15 @@
     </div>
 
     <nav class="navbar">
-        <span>HOME</span>
-        <span>A ESCOLA</span>
-        <span>CONTATOS</span>
-        <span>DOCUMENTOS</span>
-        <span>SIGA</span>
-        <span>PROFESSORES</span>
-        <span>EAD</span>
-        <span>LIVROS</span>
-        <span>CERTIFICAÇÃO</span>
+        <a href="#">HOME</a>
+        <a href="#">A ESCOLA</a>
+        <a href="#">CONTATOS</a>
+        <a href="#">DOCUMENTOS</a>
+        <a href="#">SIGA</a>
+        <a href="#">PROFESSORES</a>
+        <a href="#">EAD</a>
+        <a href="#">LIVROS</a>
+        <a href="#">CERTIFICAÇÃO</a>
     </nav>
 
 </body>
