--- a/JS/javascript.html
+++ b/JS/javascript.html
@@ -73,6 +73,7 @@ if (! namorada == true) {
 
 */
 
+/*
 var dinheiro = Number(prompt("Digite o seu saldo: R$"))
 
 if (dinheiro < 500) {
@@ -85,5 +86,15 @@ if (dinheiro < 500) {
   alert ("Vá para MG")
 } else
   alert("Vá para o Nordeste")
+*/
+
+
+//  Laço de repetição
+
+for (var i = 1; i < 10; i++) {
+  var num = i * 9
+  document.write (" 9 * " + i + " = " + num + "<br>")
+}
+
 
 </script>
